force-app/main/default/objects/Product2/fields/Consumable_Brand__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Brand__c</fullName>
    <label>Consumable Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>