force-app/main/default/objects/Product2/fields/Consumable_Type__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Type__c</fullName>
    <label>Consumable Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minibar</fullName>
            </value>
            <value>
                <fullName>Room Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>