force-app/main/default/objects/Product2/fields/Number_of_Queen_Beds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Queen_Beds__c</fullName>
    <label>Number of Queen Beds</label>
    <length>10</length>
    <type>Text</type>
</CustomField>