force-app/main/default/objects/Product2/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <label>Room Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>