force-app/main/default/objects/Product2/fields/Room_Size__c.field-meta.xml
<CustomField>
    <fullName>Room_Size__c</fullName>
    <label>Room Size</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>