force-app/main/default/objects/Product2/fields/Room_View__c.field-meta.xml
<CustomField>
    <fullName>Room_View__c</fullName>
    <label>Room View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>