force-app/main/default/objects/Product2/recordTypes/Consumable1.recordType-meta.xml
<RecordType>
    <fullName>Consumable1</fullName>
    <active>true</active>
    <label>Consumable1</label>
</RecordType>