force-app/main/default/objects/Product2/recordTypes/Room.recordType-meta.xml
<RecordType>
    <fullName>Room</fullName>
    <active>true</active>
    <label>Room</label>
</RecordType>