force-app/main/default/objects/Product2/validationRules/Consumable_Brand_VD.validationRule-meta.xml
<ValidationRule>
    <fullName>Consumable_Brand_VD</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Consumable_Brand__c) 

 &amp;&amp; 
 RecordType.Name  = &apos;Consumable&apos;</errorConditionFormula>
    <errorDisplayField>Consumable_Brand__c</errorDisplayField>
    <errorMessage>If record type is Consumable, you should not leave this field blank</errorMessage>
</ValidationRule>